@@ -267,6 +267,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        Canon   BJC S330   (EXPERIMENTAL)
        Canon   BJC S520   (EXPERIMENTAL)
+       Canon   BJC S530D  (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
